[gd_scene load_steps=6 format=3 uid="uid://b4gtqeqdcywvf"]

[ext_resource type="Script" path="res://Scripts/main_menu_ui.gd" id="1_6msh2"]
[ext_resource type="FontFile" uid="uid://duhaqbge36kok" path="res://Assets/Fonts/Mars 1.0.0.6.otf" id="2_lm15n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_klq2k"]
bg_color = Color(0.741176, 0.34902, 0.0745098, 1)
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.227451, 0.0862745, 0, 0.6)
shadow_size = 5
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tmvio"]
bg_color = Color(0.356863, 0.12549, 0.0156863, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_im3h1"]
bg_color = Color(0.741217, 0.3505, 0.0757135, 1)
border_width_right = 2
border_width_bottom = 5
border_color = Color(0.356655, 0.126911, 0.0175622, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.22708, 0.0879199, 0, 0.6)
shadow_size = 10
shadow_offset = Vector2(5, 5)

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -575.0
offset_top = -325.0
offset_right = -575.0
offset_bottom = -325.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6msh2")

[node name="BoxMainMenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -248.0
offset_right = 192.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="ButtonLocalGame" type="Button" parent="BoxMainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_lm15n")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_klq2k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tmvio")
theme_override_styles/normal = SubResource("StyleBoxFlat_im3h1")
text = "START LOCAL GAME
"

[node name="ButtonSettings" type="Button" parent="BoxMainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_lm15n")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_klq2k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tmvio")
theme_override_styles/normal = SubResource("StyleBoxFlat_im3h1")
text = "SETTINGS"

[node name="ButtonExit" type="Button" parent="BoxMainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_lm15n")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_klq2k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tmvio")
theme_override_styles/normal = SubResource("StyleBoxFlat_im3h1")
text = "EXIT"

[connection signal="pressed" from="BoxMainMenuButtons/ButtonLocalGame" to="." method="_on_button_local_game_pressed"]
[connection signal="pressed" from="BoxMainMenuButtons/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="BoxMainMenuButtons/ButtonExit" to="." method="_on_button_exit_pressed"]
